feat: finish header categories list

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css"/>
-    <title>Brazzilian Trends</title>
+    <title>Brazilian Trends</title>
   </head>
   <body>
     <header>
       <div class = "header-content">
           <div class = "upper-content">
-            <h1>BrazzilinTrends</h1>
+            <h1>BrazilianTrends</h1>
             <!-- Barra de pesquisa -->
             <div class = "search-input">
-              <input type="text" placeholder="o que deseja procurar?">
+              <input type="text" placeholder="o que deseja procurar">
               <img src="assets/svg/magnifier.svg" alt="icone de lupa"/>
             </div>
             <!-- informações da conta -->
@@ -22,7 +22,7 @@
                 <img src="assets/svg/enter.svg" alt="icone de porta indicanto entrada na conta"/>
                 <div>
                   <span class = "blue-text">minha Conta</span>
-                  <span class="beige-text">entrar cadastrar</span>
+                  <span class="beige-text">entrar/cadastrar</span>
                 </div>
               </div>
 
