feat: styling main content

--- a/src/index.html
+++ b/src/index.html
@@ -55,24 +55,29 @@
     <main>
      
         <!--Carrossel de imagem-->
-        <div>
+        <div class="carrossel-img">
           <img src="" alt=""/>
         </div>        
-        <h2>Lançamentos</h2>
-        <!-- Sessão de produtos-->
-        <section>
+        <!-- Sessão de lançamentos-->
+        <section class = "releases-section">
+          <h2 class="beige-text">lançamentos</h2>
+
+          <!--Produtos-->
+          <div>
           <!--Card de produto-->
           <div class="card">
-            <img src="" alt=""/>
-            <div>lançamento</div>
-            <span>title</span>
-
-            <!--Precificação-->
-            <div>
-              <span>R$ 49,99</span>
-              <span>R$ 49.99 à vista com desconto pix</span>
-            </div>
+            <img src="./assets/img/blusa-denim.png" alt=""/>
+            <div class = "release-tag">lançamento</div>
+            <div class = "product-highlight">
+              <h3 class="beige-text">Blusa demin turbo</h3>
+              <!--Precificação-->
+              <div>
+                <span class="blue-text price">R$ 49,99</span>
+                <span class="blue-text">R$ 49.99 à vista com desconto pix</span>
+              </div>
           </div>
+        </div>
+        </div>
         </section>
 
         <!--sessão de categorias-->
