--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
               <!--Precificação-->
               <div>
                 <span class="blue-text price">R$ 49,99</span>
-                <span class="blue-text">R$ 49.99 à vista com desconto pix</span>
+                <span class="blue-text alt-price">R$ 49.99 à vista com desconto pix</span>
               </div>
             </div>
           </div>
@@ -173,6 +173,6 @@
         </div>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
